--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,7 +1,41 @@
-.profile-dropdown {
+/* .profile-dropdown {
   position: absolute;
 }
 
 .hidden {
   display: none;
+} */
+
+.fa-user-circle {
+  color: darkblue;
+  font-size: 64px;
+}
+
+.hidden {
+  display: none;
+}
+
+.logo {
+  /* font-size: 24px; */
+  max-height: 64px;
+  width: auto;
+}
+
+.top-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.session-links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 32px;
+  /* justify-content: space-between; */
+}
+
+.session-links > * {
+  margin: 16px;
 }
