--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -30,8 +30,11 @@
   /* justify-content: center; */
   align-items: center;
   /* justify-content: space-between; */
+  top: 0;
   height: 20vh;
-  position: relative;
+  width: 100%;
+  /* position: relative; */
+  position: fixed;
   z-index: 1;
 }
 
