--- a/react-app/src/components/TuringMachinePage/turingMachine.css
+++ b/react-app/src/components/TuringMachinePage/turingMachine.css
@@ -11,6 +11,35 @@
     padding: 16px;
   }
 
-h2 {
+  .machine-page h2 {
     font-size: 48px;
+}
+
+.machine-page .tape {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 24px; /* Adjust the margin as needed */
+}
+
+.tape .square {
+  width: 60px; /* Adjust the size of the squares as needed */
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #D9D9D9;
+  border: solid black;
+  border-width: 4px 2px;
+  margin-right: 0px;
+}
+
+.tape .central.square {
+  border-width: 10px 6px; /* Thicker border for the central square */
+  width: 48px;
+  height: 48px;
+}
+
+.tape .square p {
+  font-size: 32px;
 }
