--- a/react-app/src/components/TuringMachinePage/turingMachine.css
+++ b/react-app/src/components/TuringMachinePage/turingMachine.css
@@ -11,8 +11,27 @@
     padding: 16px;
   }
 
-  .machine-page h2 {
+  .machine-page .description h2 {
     font-size: 48px;
+    margin: 0;
+    text-align: center;
+  }
+.machine-page .description p {
+  font-size: 16px;
+  margin-top: 0px;
+}
+
+.basics-and-instructions {
+  display: flex;
+  justify-content: space-between;
+}
+
+.machine-basics h3 {
+  margin-bottom: 8px;
+}
+.machine-basics .error {
+  font-size: 12px;
+  color: red;
 }
 
 .machine-page .tape {
@@ -42,4 +61,42 @@
 
 .tape .square p {
   font-size: 32px;
+}
+
+.machine-controls button {
+  color: white;
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.machine-controls .run-machine {
+  background-color: green;
+}
+
+.machine-controls .reset-machine {
+  background-color: darkgray;
+}
+
+.machine-controls .run-machine:hover {
+  background-color: darkgreen;
+}
+
+.machine-controls .reset-machine:hover {
+  background-color: gray;
+}
+
+
+.machine-page .machine-controls {
+  display: flex;
+  align-items: center;
+  margin-top: 0;
+}
+
+.machine-page .machine-basics .symbols p {
+  display: inline-block;
+  margin-right: 16px;
 }
