--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -56,7 +56,7 @@
   font-size: 48px;
   margin: 0;
   padding: 0;
-  border: 2px solid #FFD700;
+  /* border: 2px solid #FFD700; */
 }
 
 .top-bar .session-links {
@@ -64,7 +64,7 @@
   flex-direction: row;
   align-items: center;
   margin-right: 32px;
-  border: 2px solid #ADFF2F;
+  /* border: 2px solid #ADFF2F; */
   /* justify-content: space-between; */
 }
 
