--- a/react-app/src/components/TuringMachinePage/turingMachine.css
+++ b/react-app/src/components/TuringMachinePage/turingMachine.css
@@ -1,8 +1,8 @@
 /* root/react-app/src/components/TuringMachinePage/turingMachine.css */
 .machine-page {
-    border: solid;
+    /* border: solid;
     border-width: 4px;
-    border-color: blueviolet;
+    border-color: blueviolet; */
     margin-top: 20vh; /* Adjust the top margin to match the height of the top bar */
     height: calc(100vh - 20vh);
     /* overflow-y: auto;  */
@@ -99,4 +99,12 @@
 .machine-page .machine-basics .symbols p {
   display: inline-block;
   margin-right: 16px;
+}
+
+.machine-basics .results-box {
+  border: solid 8px #4A6897;
+}
+
+.machine-instructions .active {
+  color: green;
 }
