MachineForm has different headers for create and update

--- a/react-app/src/components/TuringMachineForm/machineForm.css
+++ b/react-app/src/components/TuringMachineForm/machineForm.css
@@ -9,6 +9,10 @@
     padding: 16px;
   }
 
+  .machine-form h2 {
+    text-align: center;
+  }
+
   /* Styling for the form headings */
   .heading {
     font-size: 24px;
