--- a/react-app/src/components/TuringMachineForm/machineForm.css
+++ b/react-app/src/components/TuringMachineForm/machineForm.css
@@ -1,7 +1,15 @@
  /* root/react-app/src/components/TuringMachineForm/machineForm.css */
 
- /* Styling for the entire form container */
 .machine-form {
+    margin-top: 20vh; /* Adjust the top margin to match the height of the top bar */
+    height: calc(100vh - 20vh);
+    padding-top: 40px;
+    margin-left: 15%; /* Adjust the left margin to match the width of the side bar */
+    padding: 16px;
+  }
+
+  h2.error-heading {
+    text-align: center;
     margin-top: 20vh; /* Adjust the top margin to match the height of the top bar */
     height: calc(100vh - 20vh);
     padding-top: 40px;
@@ -13,60 +21,21 @@
     text-align: center;
   }
 
-  /* Styling for the form headings */
   .heading {
     font-size: 24px;
   }
 
-  /* Styling for the form descriptions */
   .description {
     font-size: 14px;
     color: #666;
   }
 
-  /* Styling for the single-line text input */
-  /* input[type="text"],
-  select {
-    width: 100%;
-    height: 40px;
-    border: 1px solid #ccc;
-    padding: 8px;
-    margin-bottom: 20px;
-  } */
-
-  /* Styling for the multi-line textarea input */
-  /* textarea {
-    width: 100%;
-    height: 120px;
-    border: 1px solid #ccc;
-    padding: 8px;
-    resize: vertical;
-    margin-bottom: 20px;
-  } */
-
-  /* Styling for the dropdown selector */
-  /* select {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='6'%3E%3Cpath d='M1 1l4 4 4-4'/%3E%3C/svg%3E") no-repeat;
-    background-position: right 8px center;
-    background-size: 8px;
-  } */
-
-  /* Styling for the two dropdowns side by side */
-  .init-and-halting-state-dropdowns {
-    display: flex;
-  }
-
-  /* Styling for each individual dropdown */
   .form-group {
     flex: 1;
     margin-right: 10px;
   }
 
-  /* Styling for the submit button */
-  button {
+  .machine-form button {
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -74,7 +43,6 @@
     cursor: pointer;
   }
 
-  /* Styling for the error messages */
   .error-message {
     color: #ff0000;
     font-size: 14px;
