--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -20,10 +20,45 @@ button {
     margin: auto;
 }
 
+button.small {
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    margin: 2px;
+    color: whitesmoke;
+}
+
+button.delete {
+    background-color: red;
+}
+
+button.update {
+    background-color: #007bff;
+}
+
 .page, form:not(.ls-form, .login-form, .instruction-form) {
     margin-top: 20vh; /* Adjust the top margin to match the height of the top bar */
     height: calc(100vh - 20vh);
     padding-top: 40px;
     margin-left: 15%; /* Adjust the left margin to match the width of the side bar */
     padding: 16px;
+}
+
+/* for instruction display component */
+.instruction-line {
+    display: flex;
+    align-items: center;
+}
+
+.instruction-line p {
+    margin: 2px;
+}
+
+button.add-instruction {
+    background-color: darkblue;
+    color: whitesmoke;
+    border: none;
 }
