--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -9,8 +9,8 @@
 button {
     border-radius: 16px;
     cursor: pointer;
-    color: #fff;
-    fill: #fff;
+    color: whitesmoke;
+    fill: whitesmoke;
     padding: 8px 16px;
     background-color: #9D9B9B;
     border-color: #9D9B9B;
