--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -83,3 +83,19 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+
+.top-bar .session-links .create-tm {
+  display: inline-block;
+  padding: 32px;
+  border: 2px solid whitesmoke;
+  border-radius: 50%;
+  color: whitesmoke;
+  text-decoration: none;
+  background-color: #4A6897;
+  transition: background-color 0.5s, border-color 0.5s;
+
+  &:hover {
+    background-color: whitesmoke;
+    color: #4A6897;
+  }
+}
