--- a/react-app/src/components/LoginFormModal/LoginForm.css
+++ b/react-app/src/components/LoginFormModal/LoginForm.css
@@ -1,15 +1,24 @@
 /* root/react-app/src/components/LoginFormModal/LoginForm.css */
-.login-form {
-    margin: 2em;
+.ls-form {
     display: flex;
     flex-direction: column;
-}
+    align-items: left;
+    padding: 16px;
+    margin-top: 32px;
+    background-color: #f5f5f5;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: 10vh; /* Adjust the value as needed */
+    transform: translate(-50%, 30%); /* Center horizontally */
+    left: 50%;
+  }
 
-.login-form button {
+.ls-form button {
     margin: 1em;
 }
 
-button.demo-login {
+.ls-form button.demo-login {
     background-color: green;
     border-color: green;
 }
