--- a/react-app/src/components/SignupFormModal/SignupForm.css
+++ b/react-app/src/components/SignupFormModal/SignupForm.css
@@ -9,10 +9,16 @@
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     position: fixed;
-    top: 10vh; /* Adjust the value as needed */
-    transform: translate(-50%, 30%); /* Center horizontally */
+    top: 10vh;
+    transform: translate(-50%, 30%);
     left: 50%;
-  }
+}
+
+form.signup {
+    top: 5vh;
+    transform: translate(-50%, 21%);
+    left: 50%;
+}
 
   .ls-form h1 {
     font-size: 24px;
