--- a/react-app/src/components/SignupFormModal/SignupForm.css
+++ b/react-app/src/components/SignupFormModal/SignupForm.css
@@ -2,7 +2,7 @@
 .ls-form {
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: right;
     padding: 16px;
     margin-top: 32px;
     background-color: #f5f5f5;
@@ -15,43 +15,62 @@
 }
 
 form.signup {
+    align-items: center;
     top: 5vh;
-    transform: translate(-50%, 21%);
+    transform: translate(-50%, 30%);
     left: 50%;
 }
 
-  .ls-form h1 {
+form.error-display {
+    transform: translate(-50%, 20%);
+}
+
+.input-columns {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 16px;
+}
+
+.input-column {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin-right: 16px;
+}
+
+.ls-form .form-heading {
     font-size: 24px;
     margin-bottom: 16px;
     margin-top: 8px;
-  }
+}
 
-  .ls-form ul {
+.ls-form ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     color: red;
-  }
+}
 
-  .ls-form ul li {
+.ls-form ul li {
     margin-bottom: 8px;
-  }
+}
 
-  .ls-form label {
+.ls-form label {
     display: block;
     font-weight: bold;
     margin-bottom: 4px;
-  }
+}
 
-  .ls-form input {
+.ls-form input {
     width: 80%;
     padding: 8px;
     margin-bottom: 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
-  }
+}
 
-  .ls-form button {
+.ls-form button {
     background-color: #4A6897;
     color: white;
     padding: 10px 16px;
@@ -59,8 +78,8 @@ form.signup {
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s;
-  }
+}
 
-  .ls-form button:hover {
+.ls-form button:hover {
     background-color: #324b69;
-  }
+}
