--- a/react-app/src/components/InstructionForm/instructionForm.css
+++ b/react-app/src/components/InstructionForm/instructionForm.css
@@ -25,3 +25,14 @@ h3 + .description {
     position: fixed;
     top: 20%;
 }
+
+.instruction-form button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    &:hover {
+      background-color: #324b69;
+    }
+  }
