--- a/react-app/src/components/LoginFormModal/LoginForm.css
+++ b/react-app/src/components/LoginFormModal/LoginForm.css
@@ -22,8 +22,7 @@
     background-color: green;
     border-color: green;
     transition: background-color 0.3s;
-}
-
-.ls-form button.demo-login:hover {
-    background-color: darkgreen;
+    &:hover {
+        background-color: darkgreen;
+    }
 }
