--- a/react-app/src/components/SignupFormModal/SignupForm.css
+++ b/react-app/src/components/SignupFormModal/SignupForm.css
@@ -78,8 +78,7 @@ form.error-display {
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s;
-}
-
-.ls-form button:hover {
-    background-color: #324b69;
+    &:hover {
+        background-color: #324b69;
+    }
 }
